# forge

./: .env_example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/forge-agent/: Cargo.toml  README.md
crates/forge-agent/src/: agent.rs  config.rs  context.rs  effects.rs  error.rs  errors.rs  events.rs  execution.rs  http_agent_provider.rs  ids.rs  lib.rs  lifecycle.rs  profiles.rs  projection.rs  refs.rs  session.rs  state.rs  subagent.rs  tooling.rs  tools.rs  trace.rs  transcript.rs  truncation.rs  turn.rs
crates/forge-agent/src/loop/: decider.rs  journal.rs  mod.rs  planner.rs  projection.rs  reducer.rs
crates/forge-agent/src/model/: agent.rs  batch.rs  config.rs  context.rs  effects.rs  events.rs  mod.rs  projection.rs  refs.rs  state.rs  subagent.rs  tooling.rs  transcript.rs  turn.rs
crates/forge-agent/src/patch/: apply.rs  edit.rs  mod.rs  parser.rs  types.rs
crates/forge-agent/src/session/: adapters.rs  mod.rs  persistence.rs  persistence_flow.rs  runner.rs  subagents.rs  tests.rs  types.rs  utils.rs
crates/forge-agent/src/storage/: agents.rs  artifacts.rs  blobs.rs  journal.rs  mod.rs  snapshots.rs
crates/forge-agent/src/testing/: mod.rs  stepper.rs  tools.rs
crates/forge-agent/src/tools/: apply_patch.rs  artifacts.rs  dispatcher.rs  driver.rs  edit_file.rs  glob.rs  grep.rs  handler.rs  mod.rs  read_file.rs  registry.rs  shell.rs  subagents.rs  write_file.rs
crates/forge-agent/tests/: anthropic_live.rs  conformance_matrix.rs  conformance_runtime_behaviors.rs  cxdb_parity.rs  cxdb_persistence_integration.rs  events_integration.rs  openai_live.rs  turnstore_integration.rs
crates/forge-agent/tests/support/: live.rs  mod.rs
crates/forge-attractor/: Cargo.toml  README.md
crates/forge-attractor/src/: artifacts.rs  checkpoint.rs  condition.rs  context.rs  diagnostics.rs  errors.rs  events.rs  fidelity.rs  graph.rs  hooks.rs  http.rs  interviewer.rs  lib.rs  lint.rs  outcome.rs  parse.rs  queries.rs  resume.rs  retry.rs  routing.rs  runner.rs  runtime.rs  stylesheet.rs  transforms.rs
crates/forge-attractor/src/backends/: agent_provider.rs  forge_agent.rs  mod.rs
crates/forge-attractor/src/handlers/: codergen.rs  conditional.rs  exit.rs  mod.rs  parallel.rs  parallel_fan_in.rs  registry.rs  stack_manager_loop.rs  start.rs  tool.rs  wait_human.rs
crates/forge-attractor/src/storage/: mod.rs  types.rs
crates/forge-attractor/tests/: agent_provider_integration.rs  conditions.rs  conformance_parsing.rs  conformance_runtime.rs  conformance_state.rs  conformance_stylesheet.rs  cxdb_parity.rs  dot_parsing.rs  events.rs  execution_core.rs  fidelity.rs  handlers_core.rs  hitl.rs  integration_smoke.rs  live.rs  parallel.rs  queries.rs  spec_complete.rs  state_and_resume.rs  stylesheet.rs  validation.rs
crates/forge-cli/: Cargo.toml  README.md
crates/forge-cli/src/: main.rs
crates/forge-cli/tests/: e2e_pipeline.rs  smoke.rs
crates/forge-cxdb-runtime/: Cargo.toml  README.md
crates/forge-cxdb-runtime/src/: adapter.rs  lib.rs  runtime.rs  testing.rs
crates/forge-cxdb-runtime/tests/: live.rs
crates/forge-turnstore/: Cargo.toml
crates/forge-turnstore-cxdb/: Cargo.toml  README.md
crates/forge-turnstore-cxdb/src/: adapter.rs  lib.rs
crates/forge-turnstore-cxdb/tests/: live.rs
crates/forge-turnstore/src/: fs.rs  lib.rs  memory.rs  store.rs  types.rs
crates/forge-turnstore/tests/: idempotency.rs  parity.rs
examples/: 01-linear-foundation.dot  02-hitl-review-gate.dot  03-parallel-triage-and-fanin.dot  README.md
roadmap/: p01-llm-workspace-foundation.md  p02-llm-core-data-model.md  p03-llm-errors-retry-timeouts.md  p04-llm-provider-utilities.md  p05-llm-core-client-middleware.md  p05.1-llm-core-client-hardening.md  p06-llm-model-catalog.md  p07-llm-high-level-api-tools.md  p08-openai-adapters.md  p09-anthropic-adapter.md  p10-gemini-adapter.md  p11-cross-provider-tests.md  p11-dod-matrix.md  p12-docs-examples.md  p13-spec-gap-closure.md  p14-agent-workspace-crate-foundation.md  p15-agent-core-types-state-events.md  p16-agent-tool-registry-and-dispatch.md  p17-agent-local-execution-environment.md  p18-agent-session-loop-core.md  p19-agent-steering-loop-detection-reasoning.md  p20-agent-truncation-context-and-timeouts.md  p21-agent-provider-profiles-and-system-prompts.md  p22-agent-core-tools-and-provider-variants.md  p23-agent-subagents.md  p24-agent-conformance-tests-and-dod-matrix.md  p24-agent-gaps.md  p24-dod-matrix.md  p24-gaps.md  p25-agent-attractor-backend-readiness.md  p26-agent-live-integration-smoke-tests.md  p27-attractor-workspace-foundation-dot-ir-and-linting.md  p27.1-turnstore-foundation-and-agent-persistence.md  (+21 more)
(+79 files in other folders)
