[package]
name = "forge-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
forge-llm = { path = "../forge-llm" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
