[package]
name = "forge-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
forge-llm = { path = "../forge-llm" }
futures = "0.3"
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
