[package]
name = "forge-attractor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
forge-turnstore = { path = "../forge-turnstore" }
graphviz-rust = { version = "0.9.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
