[package]
name = "forge-attractor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
blake3 = "1"
forge-agent = { path = "../forge-agent" }
forge-llm = { path = "../forge-llm" }
forge-cxdb-runtime = { path = "../forge-cxdb-runtime" }
futures = "0.3"
graphviz-rust = { version = "0.9.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[features]
http = []

[dev-dependencies]
dotenvy = "0.15"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
