[package]
name = "forge-cxdb-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
cxdb = { path = "../forge-cxdb" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
