[package]
name = "forge-turnstore"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
forge-turnstore-cxdb = { path = "../forge-turnstore-cxdb" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
